finishing for today

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img src="img/logo.svg" alt="">
                 </div>
 
-                <div>
+                <div class="header--links">
                     <a href="#">inicio</a>
                     <a href="#">inicio</a>
                     <a href="#">inicio</a>
