--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
                 <div class="article">
                     <i class="fa-solid fa-pen"></i>
+                    <h3>this is the h3 title</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ducimus aspernatur sed consequatur repellendus recusandae, nisi vero hic eius veritatis.</p>
                     <a href="#"> Read more ---></a>
                 </div>
@@ -70,6 +71,7 @@
 
                 <div class="article">
                     <i class="fa-solid fa-code"></i>
+                    <h3>this is the h3 title</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ducimus aspernatur sed consequatur repellendus recusandae, nisi vero hic eius veritatis.</p>
                     <a href="#"> Read more ---></a>
                 </div>
@@ -77,6 +79,7 @@
 
                 <div class="article">
                     <i class="fa-solid fa-gear"></i>
+                    <h3>this is the h3 title</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ducimus aspernatur sed consequatur repellendus recusandae, nisi vero hic eius veritatis.</p>
                     <a href="#"> Read more ---></a>
                 </div>
@@ -84,6 +87,7 @@
 
                 <div class="article">
                     <i class="fa-brands fa-discord"></i>
+                    <h3>this is the h3 title</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ducimus aspernatur sed consequatur repellendus recusandae, nisi vero hic eius veritatis.</p>
                     <a href="#"> Read more ---></a>
                 </div>
@@ -91,6 +95,7 @@
 
                 <div class="article">
                     <i class="fa-solid fa-pen"></i>
+                    <h3>this is the h3 title</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ducimus aspernatur sed consequatur repellendus recusandae, nisi vero hic eius veritatis.</p>
                     <a href="#"> Read more ---></a>
                 </div>
@@ -98,6 +103,7 @@
 
                 <div class="article">
                     <i class="fa-solid fa-pen"></i>
+                    <h3>this is the h3 title</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ducimus aspernatur sed consequatur repellendus recusandae, nisi vero hic eius veritatis.</p>
                     <a href="#"> Read more ---></a>
                 </div>
@@ -105,6 +111,7 @@
 
                 <div class="article">
                     <i class="fa-solid fa-pen"></i>
+                    <h3>this is the h3 title</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ducimus aspernatur sed consequatur repellendus recusandae, nisi vero hic eius veritatis.</p>
                     <a href="#"> Read more ---></a>
                 </div>
@@ -112,6 +119,7 @@
 
                 <div class="article">
                     <i class="fa-solid fa-pen"></i>
+                    <h3>this is the h3 title</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ducimus aspernatur sed consequatur repellendus recusandae, nisi vero hic eius veritatis.</p>
                     <a href="#"> Read more ---></a>
                 </div>
