adding to do list

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
     <section class="results">
 
-        <div class="container content-results"> <!-- same class name -->
+        <div class="container1 content-results"> <!-- same class name container1 -->
 
             <section class="numbers">
 
@@ -188,11 +188,11 @@
         <img src="img/terceraIlustracion.svg" alt="">
         
         <div class="box-skills">
-            <h4><i class="fa-regular fa-circle-check"></i>Web Design</h4>
-            <h4><i class="fa-regular fa-circle-check"></i>Web Development</h4>
-            <h4><i class="fa-regular fa-circle-check"></i>SEO</h4>
-            <h4><i class="fa-regular fa-circle-check"></i>Web Marketing</h4>
-            <h4><i class="fa-regular fa-circle-check"></i>Web Support</h4>
+            <h4><i class="fa-regular fa-circle-check"></i> Web Design</h4>
+            <h4><i class="fa-regular fa-circle-check"></i> Web Development</h4>
+            <h4><i class="fa-regular fa-circle-check"></i> SEO</h4>
+            <h4><i class="fa-regular fa-circle-check"></i> Web Marketing</h4>
+            <h4><i class="fa-regular fa-circle-check"></i> Web Support</h4>
         </div>
 
     </section>
