--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/responsive.css">
 
-    <title>Landing With Javascript</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
+
+    <title>Landing Page With Javascript</title>
 </head>
 <body>
 
@@ -201,15 +206,32 @@
         <div class="partFooter">
             <img src="img/logo.svg" alt="">
         </div>
+
         <div class="partFooter">
-            Lorem to change text
+            <h4>Service</h4>
+            <a href="#">Service 1</a>
+            <a href="#">Service 2</a>
+            <a href="#">Service 3</a>
         </div>
+
         <div class="partFooter">
-            Lorem to change text
+            <h4>About</h4>
+            <a href="#">About 1</a>
+            <a href="#">About 2</a>
+            <a href="#">About 3</a>
         </div>
+
         <div class="partFooter">
-            Lorem to change text
+            <h4>Social Media</h4>
+            <div class="social-media">
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </div>
+
         </div>
+
     </footer>
     <script src="https://kit.fontawesome.com/de5f578256.js" crossorigin="anonymous"></script>  
 </body>
